<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webviz</name>
  <version>1.0.0</version>
  <description>WebSocket-based direct robot visualizer for real-time robot data streaming to web browsers</description>
  <maintainer email="joydeepb@cs.utexas.edu">Joydeep Biswas</maintainer>
  <license>LGPLv3</license>
  <url type="website">https://github.com/ut-amrl/webviz</url>
  <url type="repository">https://github.com/ut-amrl/webviz</url>
  <url type="bugtracker">https://github.com/ut-amrl/webviz/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- AMRL Messages (ROS2 compatible) -->
  <depend>amrl_msgs</depend>

  <!-- System Dependencies -->
  <depend>libqt5-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>libgflags-dev</depend>

  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 